# smart_cane

./: .gitignore  README.md  bed_points.txt  frames.gv  landmarks.txt  landmarks_origin.txt  plot_beds.py
.github/workflows/: ros2_ci.yaml
install/: local_setup.sh  setup.sh
log/: latest_build
maps/: new_hospital_map.pgm  new_hospital_old_map.pgm  new_hospital_old_map.yaml
src/smart_cane_bringup/: package.xml  setup.cfg  setup.py
src/smart_cane_bringup.bak/: CMakeLists.txt  package.xml
src/smart_cane_bringup.bak/smart_cane_bringup/: setup.py
src/smart_cane_bringup.bak/smart_cane_bringup/launch/: view_rviz.launch.py
src/smart_cane_bringup/smart_cane_bringup/: initialpose_pub.py
src/smart_cane_landmarks/: setup.py
src/smart_cane_landmarks.bak/: package.xml  setup.cfg
src/smart_cane_landmarks/smart_cane_landmarks/: goal_snapper.py  goto_landmark.py  landmark_visualizer.py
src/smart_cane_msgs/: CMakeLists.txt
src/smart_cane_nav/: package.xml  setup.cfg  setup.py
src/smart_cane_nav.bak/: setup.py
src/smart_cane_nav/smart_cane_nav/: collision_guidance.py  nav_cmd_vel_ui.py  qt_cmd_vel_ui.py
src/smart_cane_perception/: package.xml  setup.py
src/smart_cane_perception.bak/: setup.cfg
src/smart_cane_perception/smart_cane_perception/: changeHead.sh  color_bed_detector.py  fix_yolo_shebang.py  multi_bed_detector.py  yolo_lidar_landmark.py  (+1 more)
src/smart_cane_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/smart_cane_slam/: package.xml  setup.cfg  setup.py
src/smart_cane_slam.bak/: CMakeLists.txt  package.xml
yolo_test/: test_yolo.py
(+124 files in other folders)
