<?xml version="1.0"?>
<package format="3">
  <name>smart_cane_bringup</name>
  <version>0.1.0</version>
  <description>RViz and bringup for smart_cane</description>
  <maintainer email="yeyi58095@gmail.com">daniel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
